--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,88 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="icon" href="favicon.ico" type="image/ico">
-  <title>Portfolio</title>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Portfolio</title>
 </head>
 <body>
+<header class="header">
+    <div class="container">
+        <div class="header__inner">
+            <h1 class="header__logo" id="">Portfolio</h1>
+            <nav class="nav">
+                <span id="burger" class="burger">
+                    <i></i>
+                    <i></i>
+                    <i></i>
+                </span>
+                <div class="burger__show" id="burgerShow">
+                    <ul class="menu" id="menu">
+                        <h1 class="burger__logo">singolo</h1>
+                        <li><a class="nav__link active" href="#home">Home</a></li>
+                        <li><a class="nav__link" href="#about">About</a></li>
+                        <li><a class="nav__link" href="#my-skills">Skills</a></li>
+                        <li><a class="nav__link" href="#my-works">Works</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </div>
+</header>
+<main>
+    <div class="container">
+        <section class="about">
+            <p>
+            hi, my name is Egor Dupanov. I'm frontend developer
+            </p>
+            <div class="photo"></div>
+        </section>
+        <section class="my-skills">
+            <div class="my-skills__list">my skills</div>
+            <div class="my-skills__about">
+                <div class="skills">
+                    <div class="img-skill"></div>
+                    <p>HTML5</p>
+                    <p>описание скила</p>
+                </div>
+                <div class="skills">
+                    <div class="img-skill"></div>
+                    <p>CSS3</p>
+                    <p>описание скила</p>
+                </div>
+                <div class="skills">
+                    <div class="img-skill"></div>
+                    <p>React</p>
+                    <p>описание скила</p>
+                </div>
+            </div>
+        </section>
+        <section class="my-works">
+            <div class="my-works__list">my works</div>
+            <div class="my-works__about">
+                <div class="work">
+                    <div class="img-work">
+                        <button class="work__btn">Show</button>
+                    </div>
+                    <p>Counter</p>
+                    <p>work description</p>
+                </div>
+                <div class="work">
+                    <div class="img-work">
+                        <button class="work__btn">Show</button>
+                    </div>
+                    <p>TodoList</p>
+                    <p>work description</p>
+                </div>
 
-  <div id="app"></div>
+            </div>
+        </section>
+
+    </div>
+</main>
+
 
 </body>
 </html>
